--- a/beyond.html
+++ b/beyond.html
@@ -78,3 +78,5 @@
         </div>
     </section>
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+</html>
