--- a/denorado.html
+++ b/denorado.html
@@ -43,6 +43,7 @@
         </div>
       </nav>
       </section>
+  <body>
 <div dir="rtl">
     <div class="">
       <div class="mx-auto h-full px-4 py-10 sm:max-w-xl md:max-w-full md:px-24 md:py-36 lg:max-w-screen-xl lg:px-8">
@@ -117,3 +118,6 @@
       </div>
     </div>
   </div>
+  </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
+</html>
